--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div class="container">
-      <img class="logo" id="logo" src="ball.gif" alt="bird" />
+      <img
+        class="logo"
+        id="logo"
+        src="https://www.wizard.financial/static/media/wizaart-img.56787174.gif"
+        alt="bird"
+      />
     </div>
     <script src="script.js"></script>
   </body>
